# nocostcoin

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT_FREE_VPS.md  DEPLOYMENT_SUMMARY.md  DEVNET_LAUNCH.md  DOCUMENTATION_UPDATE_SUMMARY.md  LICENSE  ORACLE_CLOUD_DEPLOYMENT_SUCCESS.md  QUICK_REFERENCE.md  README.md  SHOWCASE_GUIDE.md  TESTNET_LAUNCH.md  VALIDATOR_GUIDE.md  WHITEPAPER.md  deploy.sh  deploy_final.sh  deploy_lite.sh  deploy_podman.sh  deploy_static.sh  deploy_vps_script.sh  docker-compose.minimal.yml  docker-compose.prod.yml  docker-compose.yml  install_docker_official.sh  install_docker_static.sh  install_docker_v2.sh  install_podman.sh  launch_devnet.ps1  launch_devnet.sh  launch_testnet.ps1  launch_testnet.sh  nginx-config.conf  railway.json  render.Dockerfile  render.yaml  start.bat  start.sh  temp_config.toml  wallet_9000.key  wallet_9001.key  (+1 more)
.agent/workflows/: VPS_CONNECTION_INFO.md  deploy-vps.md
.cargo/: config.toml
.github/workflows/: ci.yml
config/: nocostcoin.toml  node1.toml  node2.toml  node3.toml  testnet_genesis.toml
core/: Cargo.toml  Dockerfile  errors.txt
core/src/: api.rs  block.rs  chain.rs  config.rs  consensus.rs  crypto.rs  lib.rs  main.rs  mempool.rs  network.rs  node.rs  state.rs  storage.rs  sync.rs  transaction.rs  trie.rs  validator.rs  vote.rs  wallet.rs
core/tests/: integration_test.rs
deploy/: DOMAIN_SETUP.md  HOSTINGER_DEPLOYMENT.md  QUICK_START.md
deploy/nginx/: nocostcoin.conf
deploy/scripts/: monitor.sh  (+4 more)
docs/: VALIDATOR_GUIDE.md
ops/: deploy_node.sh  push_image.sh
ui/: Dockerfile  README.md  lint_errors.txt  netlify.toml  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+104 files in other folders)
