[package]
name = "nocostcoin"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
bincode = "1.3"
chrono = "0.4.42"
futures = "0.3"
hex = "0.4.3"
libp2p = { version = "0.54", features = ["kad", "gossipsub", "mdns", "noise", "tcp", "tokio", "yamux", "macros", "request-response", "cbor"] }
rand = "0.8"
rand_core = "0.6"

schnorrkel = "0.11.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sled = "0.34.7"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.4.2", features = ["server"] }

[dev-dependencies]
tempfile = "3.23.0"
