[package]
name = "nocostcoin"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
bincode = "1.3"
chrono = "0.4.42"
futures = "0.3"
hex = "0.4.3"
libp2p = { version = "0.54", features = ["kad", "gossipsub", "mdns", "noise", "tcp", "tokio", "yamux", "macros", "request-response", "cbor", "identify", "ping", "autonat"] }
rand = "0.8"
rand_core = "0.6"
bip39 = "2.0"

schnorrkel = "0.11.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
rocksdb = { version = "0.21.0", default-features = false, features = ["snappy"] }
tokio = { version = "1", features = ["full"] }
warp = { version = "0.4.2", features = ["server"] }
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

[dev-dependencies]
tempfile = "3.23.0"
